24 May 2007: Wouter
	- small changes to prepare for subqueries.
	- iterator forwarder feature separated out.
	- iterator hints stub code, config file stub code, so that first
	  testing can proceed locally.
	- replay tests now have config option to enable forwarding mode.

23 May 2007: Wouter
	- outside network does precise timers for roundtrip estimates for rtt
	  and for setting timeout for UDP. Pending_udp takes milliseconds.
	- cleaner iterator sockaddr conversion of forwarder address.
	- iterator/iter_utils and iter_delegpt setup.
	- root hints.

22 May 2007: Wouter
	- outbound query list for modules and support to callback with the
	  outbound entry to the module.
	- testbound support for new serviced queries.
	- test for retry to TCP cannot use testbound any longer.
	- testns test for EDNS fallback, test for TCP fallback already exists.
	- fixes for no-locking compile.
	- mini_event timer precision and fix for change in timeouts during
	  timeout callback. Fix for fwd_three tests, performed nonexit query.

21 May 2007: Wouter
	- small comment on hash table locking.
	- outside network serviced queries, contain edns and tcp fallback,
	  and udp retries and rtt timing.

16 May 2007: Wouter
	- lruhash_touch() would cause locking order problems. Fixup in 
	  lock-verify in case locking cycle is found.
	- services/cache/rrset.c for rrset cache code.
	- special rrset_cache LRU updating function that uses the rrset id.
	- no dependencies calculation when make clean is called.
	- config settings for infra cache.
	- daemon code slightly cleaner, only creates caches once.

15 May 2007: Wouter
	- host cache code.
	- unit test for host cache.

14 May 2007: Wouter
	- Port to OS/X and Dec Alpha. Printf format and alignment fixes.
	- extensive lock debug report on join timeout.
	- proper RTT calculation, in utility code.
	- setup of services/cache/infra, host cache.

11 May 2007: Wouter
	- iterator/iterator.c module.
	- fixup to pass reply_info in testcode and in netevent.
